CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(AML)

ADD_LIBRARY(alm SHARED alm.c)

ADD_LIBRARY(aml SHARED aml.c)

SET(CMAKE_BUILD_TYPE "Release")

FIND_PACKAGE(OpenCV REQUIRED)

TARGET_LINK_LIBRARIES (aml alm ${OpenCV_LIBS})

# The version number.
SET (AML_VERSION_MAJOR "1")
SET (AML_VERSION_MINOR "0")
SET(AML_VERSION_PATCH "0")

#-----------------------------------------------------------------------------
# AML version number.
SET(MSEG_VERSION_STRING "${MSEG_VERSION_MAJOR}.${MSEG_VERSION_MINOR}.${MSEG_VERSION_PATCH}")


IF(NOT LIB_SUFFIX)
  SET(LIB_SUFFIX "")
ENDIF(NOT LIB_SUFFIX)

INSTALL(FILES aml.h alm.h cvERS.h
  DESTINATION include)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libaml.so DESTINATION lib${LIB_SUFFIX})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libalm.so DESTINATION lib${LIB_SUFFIX})

