CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(AML)

ADD_LIBRARY(cvERS SHARED cvERS.cpp)

ADD_LIBRARY(alm SHARED alm.c)

ADD_LIBRARY(aml SHARED aml.c)

ADD_EXECUTABLE(almcli ALMcli.cpp)

ADD_EXECUTABLE(almcli_ers ALMers.cpp)

ADD_EXECUTABLE(amlcli AMLcli.cpp)

ADD_EXECUTABLE(amlcli_ers AMLers.cpp)

SET(CMAKE_BUILD_TYPE "Release")

FIND_PACKAGE(OpenCV REQUIRED)

TARGET_LINK_LIBRARIES (almcli alm aml ${OpenCV_LIBS})

TARGET_LINK_LIBRARIES (almcli_ers alm aml cvERS ${OpenCV_LIBS})

TARGET_LINK_LIBRARIES (amlcli alm aml ${OpenCV_LIBS})

TARGET_LINK_LIBRARIES (amlcli_ers alm aml cvERS ${OpenCV_LIBS})

# The version number.
SET (AML_VERSION_MAJOR "1")
SET (AML_VERSION_MINOR "0")
SET(AML_VERSION_PATCH "0")

#-----------------------------------------------------------------------------
# AML version number.
SET(MSEG_VERSION_STRING "${AML_VERSION_MAJOR}.${AML_VERSION_MINOR}.${AML_VERSION_PATCH}")


IF(NOT LIB_SUFFIX)
  SET(LIB_SUFFIX "")
ENDIF(NOT LIB_SUFFIX)

INSTALL(FILES aml.h alm.h cvERS.h
  DESTINATION include)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libaml.so DESTINATION lib${LIB_SUFFIX})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libalm.so DESTINATION lib${LIB_SUFFIX})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libcvERS.so DESTINATION lib${LIB_SUFFIX})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/almcli DESTINATION bin)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/almcli_ers DESTINATION bin)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/amlcli DESTINATION bin)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/amlcli_ers DESTINATION bin)